--- a/prototipos-materialize/register-category.html
+++ b/prototipos-materialize/register-category.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="favicon.png" />
 
-    <!--Import Google Icon Font-->
+    <!--Import Google Category Font-->
     <link rel="stylesheet" href="http://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="assets/libraries/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/libraries/materialize/css/materialize.css">
